<resources>
    <string name="app_name">Smart-ID-Photo-Helper</string>
    <string name="menu_name">Home Menu</string>
    <string name="segmentation_button_text">Change Background</string>
    <string name="start_cropping_button_text">Crop Image</string>
    <string name="upload_button_text">Upload to Cloud</string>

    <string name="album_button_text">Go to Album</string>
    <string name="process_button_text">Process New Photo</string>
    <string name="back_home_button_text">Go Back To Home Menu</string>
    <string name="color_picker_select_button_text">Select</string>
    <string name="color_picker_cancel_button_text">Cancel</string>
    <string name="detection_button_text">Smart Check</string>
    <string name="smart_crop_button_text">Smart Crop to Passport Size</string>
    <string name="login_text">Login</string>
    <string name="email_text">Email</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="register_text">Register User</string>
    <string name="log_out_text">Log out</string>
</resources>