<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="340dp"
        android:layout_height="56dp"
        android:layout_marginTop="172dp"
        android:fontFamily="cursive"
        android:text="@string/menu_name"
        android:textAlignment="center"
        android:textColor="@color/green1"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/albumButton"
        android:layout_width="180dp"
        android:layout_height="53dp"
        android:text="@string/album_button_text"
        android:textColor="@color/green1"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/processButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        android:text="@string/process_button_text"
        android:textColor="@color/green1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumButton" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/log_out_text"
        android:textColor="@color/green1"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/processButton" />

    <TextView
        android:id="@+id/banner"
        android:layout_width="167dp"
        android:layout_height="53dp"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/green1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>