<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity"
    android:background="@color/rice"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="255dp"
        android:layout_height="279dp"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="true"
        android:maxWidth="350dp"
        android:maxHeight="350dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_default_img" />

    <Button
        android:id="@+id/segmentationButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/white"
        android:text="@string/segmentation_button_text"
        android:textColor="@color/green1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smartCropButton"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/cropImageButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:text="@string/start_cropping_button_text"
        android:textColor="@color/green1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detectionButton" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:text="@string/upload_button_text"
        android:textColor="@color/green1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/segmentationButton"
        app:layout_constraintVertical_bias="0.102" />

    <ImageButton
        android:id="@+id/colorPickerButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/green1"
        android:backgroundTintMode="src_over"
        android:foregroundTint="@color/green1"
        android:padding="10dp"
        android:scaleType="centerCrop"
        android:tintMode="src_atop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toEndOf="@+id/segmentationButton"
        app:layout_constraintTop_toTopOf="@+id/segmentationButton"
        app:srcCompat="@drawable/common_google_signin_btn_icon_light_normal_background"
        app:tint="#ffffff"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/detectionButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/detection_button_text"
        android:backgroundTint="@color/white"
        android:textColor="@color/green1"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/smartCropButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:text="@string/smart_crop_button_text"
        android:textColor="@color/green1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cropImageButton" />


</androidx.constraintlayout.widget.ConstraintLayout>